(docs) fixed info not aligned correctly

--- a/docs/docs/styles/extra.css
+++ b/docs/docs/styles/extra.css
@@ -9,3 +9,7 @@
 .red {
     color: #ff1744;
 }
+
+.tx-center {
+    text-align: center;
+}
